Updated the height of the img and article classes to match the mockup. Increased the font-size of the <h2> tags. Increased the <p> font-size to get the paragraph spacing correct. Increased the <aside> class height to have it show longer than the <main> section articles.

--- a/02-Homework/Develop/assets/css/style.css
+++ b/02-Homework/Develop/assets/css/style.css
@@ -47,7 +47,8 @@ a {
 }
 
 p {
-    font-size: 16px;
+    font-size: 20px;
+    /* width: 750px; */
 }
 
 .image {
@@ -81,19 +82,19 @@ p {
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
-    height: 300px;
+    height: 350px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
 
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
-    max-height: 200px;
+    max-height: 250px;
 }
 
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
-    font-size: 36px;
+    font-size: 48px;
 }
 
 /* Attributes for Benefits (Aside Section) */
@@ -103,7 +104,7 @@ p {
     clear: both;
     float: right;
     width: 20%;
-    height: 100%;
+    height: 1150px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
